2012-09-10  Andrew Pinski  <apinski@cavium.com>

	PR tree-opt/54362
	* trans-mem.c (thread_private_new_memory): Handle COND_EXPR also.

2012-09-10  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* config/m68k/m68k.c (m68k_sched_dfa_post_advance_cycle): Support
	starting scheduling from a pre-existing state.

2012-09-10  Diego Novillo  <dnovillo@google.com>

	* vec.h (vec_t::quick_push): Remove overload that accepts 'T *'.
	Update all users.
	(vec_t::safe_push): Likewise.
	(vec_t::quick_insert): Likewise.
	(vec_t::lower_bound): Likewise.
	(vec_t::safe_insert): Likewise.
	(vec_t::replace): Change second argument to 'T &'.

2012-09-10  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/rs6000/rs6000.md: Move a splitter next to its insn.

2012-09-10  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/54089
	* config/sh/sh.h (SH_DYNAMIC_SHIFT_COST): Set always to 1 if
	dynamic shifts are available.
	(SHIFT_COUNT_TRUNCATED): Always define to 0.  Correct comment.
	* config/sh/sh.c (ashl_lshr_seq, ext_ashl_lshr_seq): Add comments.
	* config/sh/predicates.md (shift_count_operand): Allow
	arith_reg_operand even if TARGET_DYNSHIFT is false.
	* config/sh/sh.md (ashlsi3, lshrsi3): Expand library call patterns
	if needed.
	(ashlsi3_d_call, lshrsi3_d_call): New insns.

2012-09-10  Richard Sandiford  <rdsandiford@googlemail.com>

	* ira.c (setup_pressure_classes): Handle synonymous classes.

2012-09-10  Marc Glisse  <marc.glisse@inria.fr>

	* tree-ssa-forwprop.c (simplify_bitfield_ref): New function.
	(ssa_forward_propagate_and_combine): Call it.

2012-09-10  Steve Ellcey  <sellcey@mips.com>

	* config.gcc: Add mips*-mti-linux* target
	Handle with_synci like other options.
	* config/mips/gnu-user64.h (LINUX64_DRIVER_SELF_SPECS): New.
	(DRIVER_SELF_SPECS): Define in terms of LINUX64_DRIVER_SELF_SPECS.
	* config/mips/mips.h (MIPS_ISA_SYNCI_SPEC): New.
	* config/mips/mti-linux.h: New file.
	* config/mips/t-mti-linux: New file.

2012-09-10  Marc Glisse  <marc.glisse@inria.fr>
